# src/Server/IoTGateway/rules/cal.js
@@ -4,8 +4,10 @@
 /*相関函式庫*/
 var clock=require("../modules/clock.js");
 var httpServer=require("../modules/httpServer.js");
+var database=require("../modules/database.js");
 
-/*後端*/
+/*資料庫&後端*/
+var cnDB=null;
 var app=httpServer.app();
 
 /*計算碳足跡*/
@@ -34,6 +36,45 @@ app.post("/cal/Cfoot/traffic", async function(req, res){
      
 });
 
+//POST /cal/Cfoot/traffic_db => 交通+調用資料表
+//接收格式：x-www-form-urlencoded
+app.post("/cal/Cfoot/traffic_db", async function(req, res){
+    const {CPL, dist} = req.body;
+    var traffic;
+    console.log(`[${clock.consoleTime()}] HTTP POST /cal/Cfoot/traffic_db`);
+
+    if (!CPL || dist === undefined) {
+        // 檢查是否有缺少必要的資料
+        console.log(`[${clock.consoleTime()}] Missing data in request.`);
+        const responseMeta = { code: "-1", error: "Missing data in request" };
+        return res.status(400).send(responseMeta);
+    }
+
+    var searchSQL = `SELECT Max(coe) FROM CFP_P_02 WHERE name = ? ORDER BY coe DESC LIMIT 1;`;
+    var cnDB = database.cnDB();
+    const connection = await cnDB.getConnection(); // 從連接池中獲取一個連接
+    
+    /*進行計算*/
+    try {
+        var results = await connection.query(searchSQL,[CPL], { cache: false }); // 執行 SQL 查詢
+        var coe = results[0][0]['Max(coe)'];
+        traffic = coe * dist; //公式= 排放因數 * 旅行的距離
+        var responseMeta = {
+            code: "0",
+            output: `${traffic}`
+        };
+        res.send(responseMeta);
+    } catch (error) {
+        console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release(); // 釋放連接
+    }
+
+});
+
+
 //POST /cal/Cfoot/other => 其它
 //接收格式：x-www-form-urlencoded
 app.post("/cal/Cfoot/other", async function(req, res){
@@ -55,9 +96,49 @@ app.post("/cal/Cfoot/other", async function(req, res){
         const responseMeta = { code: "-1", error: error.message };
         res.status(500).send(responseMeta);
     }finally{
-
+        connection.release(); // 釋放連接
     }
      
+});
+
+//POST /cal/Cfoot/other_db => 交通+調用資料表
+//接收格式：x-www-form-urlencoded
+app.post("/cal/Cfoot/other_db", async function(req, res){
+    const {total,gwp} = req.body;
+    const data1=0.001102;
+    var other;
+    console.log(`[${clock.consoleTime()}] HTTP POST /cal/Cfoot/other_db`);
+
+    if (!gwp || total === undefined) {
+        // 檢查是否有缺少必要的資料
+        console.log(`[${clock.consoleTime()}] Missing data in request.`);
+        const responseMeta = { code: "-1", error: "Missing data in request" };
+        return res.status(400).send(responseMeta);
+    }
+
+    var searchSQL = `SELECT Max(coe) FROM CFP_P_02 WHERE name = ? ORDER BY coe DESC LIMIT 1;`;
+    var cnDB = database.cnDB();
+    const connection = await cnDB.getConnection(); // 從連接池中獲取一個連接
+
+    /*進行計算*/
+    try {
+        var results = await connection.query(searchSQL,[gwp], { cache: false }); // 執行 SQL 查詢
+        console.log(results);
+        var coe = results[0][0]['Max(coe)'];
+        other=total*data1*coe; //公式= 總數量 * 0.001102 * GWP 排放因數
+        var responseMeta = {
+            code: "0",
+            output: `${other}`
+        };
+        res.send(responseMeta);
+    } catch (error) {
+        console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release(); // 釋放連接
+    }
+
 });
 
 /*CBAM*/
@@ -86,6 +167,44 @@ app.post("/cal/CBAM/emissions", async function(req, res){
      
 });
 
+//POST /cal/CBAM/emissions_db => 排放量+調用資料表
+//接收格式：x-www-form-urlencoded
+app.post("/cal/CBAM/emissions_db", async function(req, res){
+    const {use,gwp} = req.body;
+    var emissions;
+    console.log(`[${clock.consoleTime()}] HTTP POST /cal/CBAM/emissions`);
+
+    if (!gwp || use === undefined) {
+        // 檢查是否有缺少必要的資料
+        console.log(`[${clock.consoleTime()}] Missing data in request.`);
+        const responseMeta = { code: "-1", error: "Missing data in request" };
+        return res.status(400).send(responseMeta);
+    }
+
+    var searchSQL = `SELECT Max(coe) FROM CFP_P_02 WHERE name = ? ORDER BY coe DESC LIMIT 1;`;
+    var cnDB = database.cnDB();
+    const connection = await cnDB.getConnection(); // 從連接池中獲取一個連接
+
+    /*進行計算*/
+    try {
+        var results = await connection.query(searchSQL,[gwp], { cache: false }); // 執行 SQL 查詢
+        var coe = results[0][0]['Max(coe)'];
+        emissions=use*coe; //排放量= 使用量*排放因數
+        const responseMeta = {
+            code: "0",
+            output: `${emissions}`
+        };
+        res.send(responseMeta);
+    } catch (error) {
+        console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release(); // 釋放連接
+    }
+
+});
+
 //POST /cal/CBAM/CC_simple => 碳含量_簡單與中間產品
 //接收格式：x-www-form-urlencoded
 app.post("/cal/CBAM/CC_simple", async function(req, res){
@@ -107,6 +226,45 @@ app.post("/cal/CBAM/CC_simple", async function(req, res){
         res.status(500).send(responseMeta);
     }finally{
 
+    }
+     
+});
+
+//POST /cal/CBAM/CC_simple_db => 碳含量_簡單與中間產品
+//接收格式：x-www-form-urlencoded
+app.post("/cal/CBAM/CC_simple_db", async function(req, res){
+    const {use,gwp,production} = req.body;
+    var CC_simple,emissions,coe;
+    console.log(`[${clock.consoleTime()}] HTTP POST /cal/CBAM/CC_simple_db`);
+    
+    if (!gwp || use === undefined) {
+        // 檢查是否有缺少必要的資料
+        console.log(`[${clock.consoleTime()}] Missing data in request.`);
+        const responseMeta = { code: "-1", error: "Missing data in request" };
+        return res.status(400).send(responseMeta);
+    }
+
+    var searchSQL = `SELECT Max(coe) FROM CFP_P_02 WHERE name = ? ORDER BY coe DESC LIMIT 1;`;
+    var cnDB = database.cnDB();
+    const connection = await cnDB.getConnection(); // 從連接池中獲取一個連接
+
+    /*進行計算*/
+    try{
+        var results = await connection.query(searchSQL,[gwp], { cache: false }); // 執行 SQL 查詢
+        coe = results[0][0]['Max(coe)'];
+        emissions=use*coe; //排放量= 使用量*排放因數
+        CC_simple=emissions/production; //產品碳含量= 排放量/產品活動數據(生產量)
+        const responseMeta = {
+            code: "0",
+            output: `${CC_simple}`
+        };
+        res.send(responseMeta);
+    }catch{
+        console.log(`[${clock.consoleTime()}] Error`);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    }finally{
+        connection.release(); // 釋放連接
     }
      
 });
