# src/Server/IoTGateway/rules/crawler.js
@@ -30,7 +30,6 @@ app.get("/read/crawler/AQI/ALL",async function(req, res) {
         }));
         var data = JSON.stringify(formattedResults);
         res.send(data);
-        console.log(`[${clock.consoleTime()}] ${data}`);
     } catch (error) {
         console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
         const responseMeta = { code: "-1" };
@@ -111,7 +110,32 @@ app.get("/read/crawler/Cfoot/name", async function(req, res) {
         }));
         var data = JSON.stringify(formattedResults);
         res.send(data);
-        console.log(`[${clock.consoleTime()}] ${data}`);
+    } catch (error) {
+        console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
+        const responseMeta = { code: "-1" };
+        res.send(responseMeta);
+        throw error;
+    } finally {
+        connection.release(); // 釋放連接
+    }
+},catchError(errorController));
+
+
+// GET /read/crawler/CFoot/list => 物品名
+app.get("/read/crawler/CFoot/list",async function(req, res) {
+    var statusSQL = `SELECT id,name FROM CFP_P_02 ORDER BY id ASC;`;
+    console.log(`[${clock.consoleTime()}] HTTP GET /read/crawler/CFoot/list`);
+
+    var cnDB = database.cnDB();
+    const connection = await cnDB.getConnection(); // 從連接池中獲取一個連接
+
+    try {
+        const results = await connection.query(statusSQL, { cache: false }); // 執行 SQL 查詢
+        const formattedResults = results[0].map(item => ({
+            ...item,
+        }));
+        var data = JSON.stringify(formattedResults);
+        res.send(data);
     } catch (error) {
         console.error(`[${clock.consoleTime()}] Failed to execute query: ${error.message}`);
         const responseMeta = { code: "-1" };
